--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
     <div class="book-toc notification is-warning ">
         <h3>目录 &nbsp;</h3>
         <ul class=" chapter-area">
-            <li class="chapter-item"><a href="./dist/ES6.html">ES6</a></li>
-            <li class="chapter-item"><a href="./dist/Vue.html">Vue</a></li>
-            <li class="chapter-item"><a href="./dist/微信小程序.html">微信小程序</a></li>
+            <li class="chapter-item"><a href="./dist/ES6.html" target="_blank">ES6</a></li>
+            <li class="chapter-item"><a href="./dist/Vue.html" target="_blank">Vue</a></li>
+            <li class="chapter-item"><a href="./dist/微信小程序.html" target="_blank">微信小程序</a></li>
 
 
 
