--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body dir="ltr">
     <nav class="columns navbar">
-        <div class="column logo is-3 is-offset-1"><a class="is-brand" href="./index.html">江南的博客</a></div>
+        <div class="column logo is-3 is-offset-1"><a class="is-brand " href="./index.html">博客</a></div>
     </nav>
     <div class="columns content">
         <div class="column is-2-desktop is-3-widescreen is-hidden-touch"></div>
@@ -35,21 +35,18 @@
         <div class="column is-2-widescreen is-hidden"></div>
     </div>
     <!-- 侧边栏目录 -->
-    <div class="book-toc notification is-warning ">
+    <div class="book-toc notification  is-link ">
         <h3>目录 &nbsp;</h3>
         <ul class=" chapter-area">
-            <li class="chapter-item"><a href="./dist/ES6.html" target="_blank">ES6</a></li>
-            <li class="chapter-item"><a href="./dist/Vue.html" target="_blank">Vue</a></li>
-            <li class="chapter-item"><a href="./dist/微信小程序.html" target="_blank">微信小程序</a></li>
-
-
-
+            <li class="chapter-item"><a href="dist/html/ES6.html" target="_blank">ES6</a></li>
+            <li class="chapter-item"><a href="dist/html/Vue.html" target="_blank">Vue</a></li>
+            <li class="chapter-item"><a href="dist/html/Vue.html" target="_blank">CSS库</a></li>
+            <li class="chapter-item"><a href="dist/html/微信小程序.html" target="_blank">微信小程序</a></li>
         </ul>
     </div>
     <!-- 底部网站信息 -->
     <div class="columns foot">
-        <div class="column is-3 is-offset-9 build-by">Build by <a href="https://github.com/ruanyf/loppo"
-                target="_blank">Loppo</a> 0.6.17</div>
+        <div class="column is-3 is-offset-9 build-by"></div>
     </div>
 
     <div class="progress-indicator"></div><!-- SCRIPTS -->
