--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
       repo: '',
       coverpage:true,
       loadSidebar: true,
-      homepage:'home.md'
+      homepage:'home.md',
+      subMaxLevel: 2
     }
   </script>
   <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
