--- a/test.html
+++ b/test.html
@@ -1,44 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
+        .app {
+            border: 1px solid blue;
+            overflow: hidden;
+            /* 不推荐 */
+        }
+
+        .app::after {
+            content: '';
+            display: table;
+            clear: both;
+            /* 推荐  */
+        }
+
         .box1 {
+            float: right;
+            left: 100px;
+            right: 100px;
             width: 100px;
             height: 30px;
             background: red;
-            margin: 0 auto;
+            margin-right: 100px;
         }
     </style>
 </head>
+
 <body>
-    <div>
+    <div class="app">
         <div class="box1"> </div>
     </div>
-        <script src="https://cdn.jsdelivr.net/npm/vue"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue"></script>
     <script>
-    new Vue({
-      el:"#app",
-      data: {
-        title:"标题",
+        new Vue({
+            el: "#app",
+            data: {
+                title: "标题1111",
 
-      },
-      methods:{
+            },
+            methods: {
+                say: () => {
+                    console.log("我是say方法");
+                    console.log(this);
+                },
+                run() {
+                    console.log("我是run方法");
+                    let obj = {
+                        walk: () => {
+                            console.log("我是walk");
+                            console.log(this);
+                        },
+                        sing(){
+                            console.log("我是sing");
+                            console.log(this);
+                        }
+                    }
+                    obj.walk();
+                    obj.sing();
+                }
 
-      },
-      computed:{
+            },
+            computed: {
 
-      },
-      created(){
-                 
-      },
-      mounted(){
+            },
+            created() {
+                // console.log(this);
+                // console.log(this.title);
+                // const arrow = ()=>{
+                //     console.log(this);
+                // }
+                // arrow()
+                this.say();
+                this.run();
 
-      }
-    })
+            },
+            mounted: () => {
+                console.log("mounted中");
+                console.log(this);
+            }
+        })
+        let obj = {
+            name: "jack",
+            run() {
+                console.log("runioooong");
 
+            }
+        }
+        obj.run();
     </script>
 </body>
 
