响应式设计代码块

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     window.$docsify = {
       name: '博客',
       repo: '',
-      coverpage:true,
+      // coverpage:true,
       loadSidebar: true,
       homepage:'home.md',
       subMaxLevel: 2
